--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -4,9 +4,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
 spring.datasource.username=postgres
 spring.datasource.password=changemeinprod!
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-
+app.jwt.secret=achangerAvecUneCleplussecurisantBrefPlusCorrect
+app.jwt.expiration=3600000
