--- a/back/src/test/resources/application.properties
+++ b/back/src/test/resources/application.properties
@@ -4,4 +4,8 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+app.jwt.secret=achangerAvecUneCleplussecurisantBrefPlusCorrect
+app.jwt.expiration=3600000
 
